--- a/middle.css
+++ b/middle.css
@@ -116,7 +116,7 @@ header {
 
 .top-wrapper {
     padding: 180px 0 100px 0;
-    background-image: url("file:///Users/motyu20/Downloads/1ce9dfe9b1c8d13046df386cf1693335_s.jpg");
+    background-image: url("1ce9dfe9b1c8d13046df386cf1693335_s.jpg");
     color: white;
     background-size: cover;
     text-align: center;
