--- a/middle.css
+++ b/middle.css
@@ -377,6 +377,31 @@ textarea {
     height: 20px;
 }
 
+.main h3 {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 24px;
+}
+
+.display-contact {
+    width: 70%;
+    margin: 30px auto;
+    padding: 50px;
+    background-color: #F5F5F5;
+    color: #333;
+}
+
+.form-title {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 30px;
+}
+
+.form-item {
+    padding: 20px 0 10px 0;
+    font-weight: bold;
+}
+
 footer {
     padding-top: 30px;
 }
